NOJIRA: another CSS fix for IE to prevent 'View all connections' link overflowing onto connections
git-svn-id: https://source.sakaiproject.org/svn/profile2/trunk@87860 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/profile2/tool/src/webapp/css/profile2.css
+++ b/profile2/tool/src/webapp/css/profile2.css
@@ -328,18 +328,19 @@ h2 {
 .side-widget-item-count, .side-widget-more-link  {
 	font-size: 70%;
 	position: absolute;
-	width: 50%;
 }
 
 .side-widget-item-count {
    	left: 0;
    	padding-left: 2px;
+   	width: 40%;
 }
 
 .side-widget-more-link {
    right: 0;
    text-align: right; /* depends on element width */
    padding-right: 2px;
+   width: 60%;
 }
 
 
